# kaggle-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  config.json  docker-compose.yml  kaggle_agents_colab.ipynb  kaggle_agents_competition_colab.ipynb  kaggle_agents_mlebench_lite.ipynb  kaggle_agents_mlebench_lite_notebook_colab.ipynb  langgraph.json  main.py  pyproject.toml
examples/: run_enhanced_workflow.py
kaggle_agents/: __init__.py  cli.py  main.py  workflow.py
kaggle_agents/agents/: __init__.py  ablation_agent.py  data_collector.py  developer_agent.py  eda_agent.py  ensemble_agent.py  explainability_agent.py  feature_engineer.py  leaderboard_monitor.py  meta_evaluator_agent.py  model_trainer.py  planner_agent.py  reporting_agent.py  robustness_agent.py  search_agent.py  strategy_agent.py  submission_agent.py
kaggle_agents/agents/developer/: __init__.py  agent.py  code_generator.py  dspy_modules.py  grpo.py  mlebench.py  quiet_star.py  refinement.py  retry.py  utils.py  validation.py
kaggle_agents/agents/ensemble/: __init__.py  agent.py  alignment.py  fallback.py  meta_model.py  prediction_pairs.py  scoring.py  stacking.py  submission.py  utils.py
kaggle_agents/agents/ensemble/strategies/: __init__.py
kaggle_agents/agents/meta_evaluator/: __init__.py  agent.py  analysis.py  detection.py  eureka.py  guidance.py  memory.py  prompts.py  rewards.py  training.py
kaggle_agents/agents/planner/: __init__.py  agent.py  curriculum.py  debug_loop.py  domain_patterns.py  dspy_modules.py  eureka.py  fallback_plans.py  plan_refinement.py  sota_analysis.py  validation.py
kaggle_agents/agents/planner/fallback_plans/: __init__.py  audio.py  base.py  image.py  seq2seq.py  tabular.py  text.py
kaggle_agents/agents/planner/strategies/: __init__.py  cv.py  nlp.py  tabular.py
kaggle_agents/core/: __init__.py  agent_base.py  api_handler.py  config.py  config_manager.py  contracts.py  executor.py  logger.py  memory.py  orchestrator.py  reward_signals.py  sop.py  state.py
kaggle_agents/core/state/: __init__.py  ablation.py  artifacts.py  base.py  checks.py  competition.py  contracts.py  learning.py  memory.py  memory_managers.py  model_registry.py  persistent_memory.py  persistent_store.py  registry.py  results.py  types.py
kaggle_agents/core/tools/: __init__.py  embeddings.py  retrieve_tool.py
kaggle_agents/domain/: __init__.py  detector.py
kaggle_agents/domain/detection/: __init__.py  constants.py  dataclasses.py  detector.py  file_detection.py  llm_detection.py  signal_detection.py  signal_fusion.py  submission_format.py  text_tabular_detection.py
kaggle_agents/enhanced_agents/: __init__.py  developer_agent.py  planner_agent.py  reader_agent.py  reviewer_agent.py  summarizer_agent.py
kaggle_agents/mlebench/: __init__.py  data_adapter.py  runner.py
kaggle_agents/mlebench/data_adapter/: __init__.py  adapter.py  dataclasses.py  detection.py  file_finders.py  workspace.py  zip_handlers.py
kaggle_agents/nodes/: curriculum_learning.py  prompt_refinement.py
kaggle_agents/optimization/: __init__.py  hpo.py  preference_learning.py  prompt_optimizer.py  reward_model.py
kaggle_agents/prompts/: __init__.py  prompt_base.py  prompt_developer.py  prompt_planner.py  prompt_reader.py  prompt_reviewer.py
kaggle_agents/prompts/templates/: audio_template.py  data_format_prompt.py  developer_prompts.py  planner_prompts.py
kaggle_agents/prompts/templates/builders/: __init__.py  budget.py  context.py  cv.py  ensemble.py  feature_eng.py  image_model.py  model.py  optuna.py
kaggle_agents/prompts/templates/constraints/: __init__.py  audio.py  base.py  image.py  image_to_image.py  loader.py  nlp.py  tabular.py
kaggle_agents/prompts/templates/developer/: __init__.py  ablation.py  component_guidance.py  core.py  fix_debug.py  prompt_composition.py  utils.py
kaggle_agents/tools/: __init__.py  checkpoint_manager.py  code_executor.py  competition_analyzer.py  data_format_discovery.py  kaggle_api.py  kaggle_search.py  timeout_advisor.py
kaggle_agents/tools/code_executor/: __init__.py  artifact_validator.py  dataclasses.py  error_parser.py  executor.py  process.py  sanitizer.py  submission.py
kaggle_agents/tools/ml_tools_doc/: create_features.md  fill_missing_values.md  train_model.md
kaggle_agents/utils/: artifact_manager.py  calibration.py  config.py  cross_validation.py  csv_utils.py  data_audit.py  data_contract.py  ensemble_audit.py  error_parser.py  feature_engineering.py  fold_checkpoint.py  hf_compat.py  hyperparameter_tuning.py  label_parser.py  llm_utils.py  log_parser.py  oof_validation.py  precomputed_features.py  safe_loading.py  safe_transforms.py  state.py  strict_validation.py  submission_format.py  target_inference.py  text_normalization.py  time_budget.py
kaggle_agents/workflow/: __init__.py  routing.py  runner.py
kaggle_agents/workflow/graphs/: __init__.py  main.py  mlebench.py  simple.py
kaggle_agents/workflow/nodes/: __init__.py  ablation_validation.py  canonical_data.py  data_audit.py  data_download.py  data_exploration.py  data_format.py  data_validation.py  debug_node.py  domain_detection.py  iteration.py  sota_search.py
kaggle_agents/workflows/: __init__.py  enhanced_workflow.py  kaggle_workflow.py
notebooks/: kaggle_agents_mlebench_lite_colab.ipynb  kaggle_eval.py  mlebench_eval.py
tests/: README.md  __init__.py  conftest.py  test_code_executor.py  test_cross_validation.py  test_cvfolds_injection.py  test_data_contract.py  test_data_contract_seq2seq.py  test_data_format_discovery.py  test_domain_override.py  test_ensemble_multi_strategy.py  test_feature_engineering.py  test_hf_compat.py  test_hpo.py  test_log_parser.py  test_mlebench_data_adapter.py  test_planner_stagnation.py  test_precomputed_features.py  test_preference_learning.py  test_quiet_star.py  test_search_agent.py  test_state.py  test_submission_format.py  test_target_inference.py  test_text_normalization.py  verify_kaggle_api_logic.py
