[project]
name = "kaggle-agents"
version = "0.1.0"
description = "Multi-agent framework for autonomous Kaggle competitions using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.6.8",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "kaggle>=1.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "optuna>=3.0.0",
    "category-encoders>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]
