[project]
name = "kaggle-agents"
version = "0.1.0"
description = "Multi-agent framework for autonomous Kaggle competitions using LangGraph"
requires-python = ">=3.10"
dependencies = [
    # LangGraph & LangChain Core
    "langgraph>=0.6.8",
    "langchain>=0.3.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=0.0.3",

    # Prompt Optimization
    "dspy-ai>=2.4.0",
    "textgrad>=0.1.0",

    # Vector Database & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Kaggle Integration
    "kaggle>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # ML Core Libraries
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",

    # Gradient Boosting
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",

    # Hyperparameter Optimization
    "optuna>=3.0.0",
    "optuna-integration>=0.1.0",

    # Feature Engineering
    "category-encoders>=2.6.0",
    "feature-engine>=1.6.0",

    # Deep Learning (for CV & NLP domains)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "timm>=0.9.0",

    # Time Series
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
kaggle-agents = "kaggle_agents.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ==================== Ruff Configuration ====================
[tool.ruff]
# Excluir diretórios da análise
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "competitions/",  # Diretórios gerados
    "adk_example_inspiration/",  # Exemplos de referência
]

# Linha máxima (padrão: 88, mas pode ajustar)
line-length = 100

# Python version target
target-version = "py310"

[tool.ruff.lint]
# Regras a serem checadas
# Veja: https://docs.astral.sh/ruff/rules/
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize code)
    "B",      # flake8-bugbear (detect common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

# Regras a ignorar
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults (common in FastAPI/Pydantic)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "ARG001", # Unused function argument (comum em callbacks LangGraph)
    "ARG002", # Unused method argument
    "N806",   # Variable in function should be lowercase (sklearn usa X, y)
    "N803",   # Argument name should be lowercase
    "ERA001", # Commented out code (às vezes é útil manter)
]

# Permitir autofix para estas regras
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignorar regras específicas em testes
"tests/**/*.py" = [
    "PLR2004",  # Magic values ok in tests
    "S101",     # Assert ok in tests
]

# Ignorar em exemplos
"adk_example_inspiration/**/*.py" = ["ALL"]

[tool.ruff.lint.isort]
# Configuração de import sorting
known-first-party = ["kaggle_agents"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
# Complexidade ciclomática máxima
max-complexity = 15

[tool.ruff.format]
# Usar aspas duplas
quote-style = "double"

# Indentação com espaços
indent-style = "space"

# Usar trailing commas
skip-magic-trailing-comma = false
